go-api/k8s-manifests/deployment-app-01.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-01-deployment
  namespace: go-api
spec:
  template:
    metadata:
      labels:
        app: go-app-01
    spec:
      containers:
      - name: go-api-server
        image: jvin911/janiths-public-repo:sample-go-application-01
        volumeMounts:
        - mountPath: "/var/www/html"
          name: go-app-01-volume
      volumes:
        - name: go-app-01-volume
          persistentVolumeClaim:
            claimName: go-app-01-pvc-v2
  replicas: 10
  selector:
    matchLabels:
      app: go-app-01
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
