go-api/k8s-manifests/deployment-app-02.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-02-deployment
  namespace: go-api
spec:
  template:
    metadata:
      labels:
        app: go-app-02
    spec:
      containers:
      - name: go-api-server
        image: jvin911/janiths-public-repo:sample-go-application-01
        volumeMounts:
        - mountPath: "/var/www/html"
          name: go-app-02-volume
      volumes:
        - name: go-app-02-volume
          persistentVolumeClaim:
            claimName: go-app-02-pvc
  replicas: 1
  selector:
    matchLabels:
      app: go-app-02
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
