go-api/k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-api-deployment
  namespace: go-api
spec:
  template:
    metadata:
      labels:
        app: go-api
    spec:
      containers:
      - name: go-api-server
        image: jvin911/janiths-public-repo:sample-go-api-v2
  replicas: 3
  selector:
    matchLabels:
      app: go-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
