go-api/k8s-manifests/service-app-01.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: go-api
  name: go-app-01-service
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: go-app-01
