go-api/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: go-api
  name: go-api-service
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: go-api
