go-api/k8s-manifests/ingress-app-02.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app-02-ingress
  namespace: go-api
  annotations:
    ingress.kubernetes.io/rewrite-target: /app-02
spec:
  ingressClassName: nginx
  rules:
  - host: go-app.local-cluster.internal
    http:
      paths:
      - backend:
          service:
            name: go-app-02-service
            port:
              number: 8080
        path: /app-02
        pathType: Prefix
